Update Posts “2022-08-01-new-post”

--- a/posts/2022-08-01-new-post.md
+++ b/posts/2022-08-01-new-post.md
@@ -3,6 +3,6 @@ layout: layouts/post.njk
 title: new post2
 description: test description 2
 date: 2022-07-31T18:30:00.000Z
-featuredImage: /images/uploads/4442617-hd-wallpapers-bambidkar-41031077-3840-2160.jpg
+featuredImage: /images/uploads/forest-3622519.jpg
 ---
-test discription
+test discription2
